# nobleo_odometry_calibration

./: CMakeLists.txt  README.md  bitbucket-pipelines.yml  package.xml  sonar-project.properties
.github/workflows/: industrial_ci_action.yml
cfg/: Calibrator.cfg
config/: model_view.rviz
doc/: 3_error.svg.license
include/nobleo_gps_calibration/: bag_buffer.hpp  bag_player.hpp  calibrator.hpp  config.hpp  cost_function.hpp  math.hpp  solver.hpp
include/nobleo_odometry_calibration/: bag_buffer.hpp  bag_player.hpp  calibrator.hpp  config.hpp  cost_function.hpp  math.hpp  solver.hpp
launch/: bringup.launch  hardware.launch  main.launch
src/: bag_buffer.cpp  bag_player.cpp  bag_player.hpp  calibrator.cpp  calibrator.hpp  config.cpp  cost_function.hpp  main.cpp  math.cpp  math.hpp  offline.cpp  solver.cpp  solver.hpp
test/: main.cpp  test_cost_function.cpp  test_math.cpp  test_solver.cpp
